:bug: Fix z-index on profile pic

--- a/site/engpage.css
+++ b/site/engpage.css
@@ -24,7 +24,7 @@ nav {
     width: 100%;
     padding: 10px 0; /* Optional: add padding for vertical spacing */
     box-sizing: border-box; /* Include padding and border in the element's total width */
-    z-index: 2;
+    z-index: 3;
     background-color: #000000;
     top: 0;
     /*
